Fixed memory leak during downloading huge files.